[tool.poetry]
name = "test-weather-forecast"
version = "0.1.0"
description = "Solution for https://github.com/SeitaBV/assignment-data-engineering?tab=readme-ov-file"
authors = ["Nikolai Rozanov <nickolay.rozanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
uvicorn = "^0.23.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
a2wsgi = "^1.6.0"
fastapi-pagination = "^0.11.0"
schemathesis = "^3.17.5"
types-aiobotocore = {extras = ["essential"], version = "^2.4.2"}
python-http-client = "^3.3.7"
aiobotocore = "^2.5.0"
asyncio = "^3.4.3"
psycopg2-binary = "^2.9.7"
pydantic = {version = "^1.10.2", extras = ["dotenv", "email"]}
gunicorn = "^20.1.0"
pycryptodome = "^3.18.0"
timely-beliefs = "^2.0.0"
typer = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-factoryboy = "^2.5.0"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.21.0"
freezegun = "^1.2.2"
